Incluido capitulo de conclusao no documento principal

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -30,6 +30,8 @@
 \usepackage{amsmath}      % para fórmulas matemáticas
 \usepackage{amssymb}      % para símbolos matemáticos
 \usepackage{listings}     % para listagens de código
+\usepackage{caption}      % para legendas
+\usepackage{subcaption}   % para imagens aninhadas
 
 % ---
 % Pacotes de citações
@@ -185,6 +187,12 @@
 % Resultados
 % ----------------------------------------------------------
 \include{capitulos/resultados}
+% ----------------------------------------------------------
+
+% ----------------------------------------------------------
+% Conclusão
+% ----------------------------------------------------------
+\include{capitulos/conclusao}
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
