--- a/Dissertacao_Marcelo_Goncalves/resumo.tex
+++ b/Dissertacao_Marcelo_Goncalves/resumo.tex
@@ -1,26 +1,43 @@
 % resumo em português
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
- Segundo a \citeonline[3.1-3.2]{NBR6028:2003}, o resumo deve ressaltar o
- objetivo, o método, os resultados e as conclusões do documento. A ordem e a extensão
- destes itens dependem do tipo de resumo (informativo ou indicativo) e do
- tratamento que cada item recebe no documento original. O resumo deve ser
- precedido da referência do documento, com exceção do resumo inserido no
- próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
- resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto.
+Um dos principais desafios enfrentados pelos usuários de nuvens que oferecem 
+infraestrutura-como-serviço (IaaS) é planejar adequadamente a capacidade dos 
+recursos da nuvem necessários às suas aplicações. Este trabalho propõe uma nova 
+abordagem para apoiar o planejamento da capacidade de aplicações em nuvens IaaS. 
+A nova a abordagem tem como premissa a definição de uma relação de capacidade 
+entre as diferentes configurações de recursos oferecidas por um provedor de nuvem, 
+com a qual é possível prever (ou ``inferir''), com alto grau de precisão, o 
+desempenho esperado de uma aplicação para determinadas configurações de recursos. 
+A predição é realizada com base no desempenho observado para outras configurações 
+de recursos do mesmo provedor. Dessa forma, a abordagem consegue reduzir, de 
+forma significativa, o número total de configurações que precisam ser de fato 
+testadas na nuvem (resultados preliminares, obtidos em um ambiente real de nuvem, 
+mostram uma redução de mais de 80\% no número total de configurações avaliadas), 
+implicando em menores custo e tempo para o processo de planejamento.
 
- \textbf{Palavras-chaves}: latex. abntex. editoração de texto.
+ \textbf{Palavras-chaves}: Computação em Nuvem. Planejamento de Capacidade. Inferência de Desempenho.
 \end{resumo}
 
 % resumo em inglês
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
+One of the main challenges faced by users of infrastructure-as-a-service (IaaS) 
+clouds is to correctly plan the resource capacity required for their applications'
+needs. This work proposes a new approach to support application capacity planning 
+in IaaS clouds. This new approach is based on the definition of a capacity relation 
+between different resource configurations offered by a cloud provider which enables 
+to predict (or ``infer''), with a high level of accuracy, the expected performance 
+of an application for certain resource configurations. The prediction is made based
+upon the observed performance for other resource configurations within the same 
+provider. The approach significantly reduces the total number of configurations 
+effectively tested in the cloud (preliminary results show reductions of over 80\% 
+on the number of total tested configurations) resulting in lower costs and time 
+for the capacity planning process.
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: latex. abntex. text editoration.
+   \textbf{Key-words}: Cloud Computing. Capacity Planning. Performance Inference.
  \end{otherlanguage*}
 \end{resumo}
