Pacote para row span em tabelas

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -32,6 +32,7 @@
 \usepackage{listings}     % para listagens de código
 \usepackage{caption}      % para legendas
 \usepackage{subcaption}   % para imagens aninhadas
+\usepackage{multirow}     % para row span em tabelas
 
 % ---
 % Pacotes de citações
