Inserir lista de tabelas

--- a/Dissertacao_Marcelo_Goncalves/listas.tex
+++ b/Dissertacao_Marcelo_Goncalves/listas.tex
@@ -9,9 +9,9 @@
 % ---
 % inserir lista de tabelas
 % ---
-%\pdfbookmark[0]{\listtablename}{lot}
-%\listoftables*
-%\cleardoublepage
+\pdfbookmark[0]{\listtablename}{lot}
+\listoftables*
+\cleardoublepage
 % ---
 
 % ---
