--- a/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
@@ -1,30 +1,41 @@
 \chapter[Introdução]{Introdução}
 % ----------------------------------------------------------
+
+\section{Motivação}
+
+A computação em nuvem é um paradigma computacional que está
+transformando a forma de desenvolver e gerenciar aplicações e serviços de
+tecnologia da informação. Diversas organizações passaram a adotar este paradigma
+atraídas pelo seu modelo de negócios onde recursos computacionais (ex:
+computação, armazenamento e transferência de dados) podem ser consumidos, sob-demanda, 
+como um serviço e pagos de acordo com o consumo efetuado. Um dos principais
+desafios enfrentados pelos usuários de nuvens que oferecem 
+infraestrutura-como-serviço (IaaS) é planejar adequadamente a capacidade 
+dos recursos da nuvem necessários às suas aplicações.  
+
 O processo de decisão pela migração de aplicações para o ambiente de nuvens computacionais 
 envolve uma série de análises que buscam, entre outras coisas, identificar que vantagens a 
-mudança trará de fato. Ao comparar os serviços de provedores de computação em nuvem com a 
-administração de um centro de dados próprio, a melhoria dos indicadores de desempenho e de 
-custo, como redução de tempo de resposta, redução/otimização de custo de operação e melhores 
-ferramentas com mais facilidades de gerenciamento, está entre os principais benefícios buscados 
-a partir da adoção do ambiente de infraestrutura como serviço (IaaS – Infrastructure as a Service)
-\cite{li2011cloudprophet, rodero2010infrastructure}.
+mudança trará de fato \cite{li2011cloudprophet, rodero2010infrastructure}, 
+além de tentar descobrir a melhor maneira de configurar a aplicação com os
+vários recursos oferecidos pelo provedor de nuvem.
 
-Em geral, provedores de IaaS cobram um valor em função do tempo de ocupação de uma máquina 
-virtual, normalmente medido em horas, e esse valor unitário varia conforme o tamanho da máquina 
-virtual (capacidade de processamento, memória e espaço de armazenamento). Dessa forma, a apuração 
-do custo de operação da aplicação em um determinado período de tempo leva em conta a quantidade 
-de máquinas virtuais utilizadas bem como seu perfil, ou seja, o tamanho e quantidade de recursos 
+Um dos principais recursos computacionais oferecidos por provedores de nuvem
+IaaS, que normalmente representam a parte mais significativa dos gastos dos
+clientes, é o serviço de máquina virtual. Em geral, provedores de IaaS cobram um
+valor em função do tempo de utilização deste recurso, normalmente medido em horas, e esse valor 
+unitário varia conforme o tamanho da máquina virtual (capacidade de processamento, memória e espaço de armazenamento).
+Dessa forma, a apuração do custo de operação de uma aplicação em um determinado
+período de tempo leva em conta a quantidade de máquinas virtuais utilizadas bem como seu perfil, ou seja, o tamanho e quantidade de recursos 
 usados em cada uma.
  
 Para prever o custo de operação de uma aplicação na nuvem, é preciso estimar ou medir como a 
-aplicação responderá à demanda submetida em termos de indicadores de desempenho. A aplicação deve 
-manter ou superar na nuvem o nível de desempenho apresentado quando executada em centro de dados 
-próprio e com indicadores de custo menores, a fim de que se justifique o investimento feito na 
-migração de ambiente. Para se chegar a essa conclusão, faz-se necessário conhecer o comportamento 
-da aplicação na nova implantação para que se identifiquem quais perfis de máquinas virtuais 
-oferecidos pelo provedor são capazes de executar a aplicação com níveis satisfatórios de desempenho. 
-Somem-se a isso as variações da demanda exercida sobre a aplicação e as diversas possibilidades de 
-variação de arquitetura de implantação por meio de procedimentos de escalabilidade.
+aplicação responderá à demanda submetida em termos de indicadores de desempenho. Para se chegar a essa 
+conclusão, faz-se necessário conhecer o comportamento 
+da aplicação no ambiente de nuvem para que se identifiquem quais perfis de
+máquinas virtuais oferecidos pelo provedor são capazes de executar a aplicação com níveis satisfatórios de desempenho. 
+Somem-se a isso as variações da demanda exercidas sobre a aplicação e as
+diversas possibilidades de variação da arquitetura de implantação por meio de
+procedimentos de escalabilidade.
  
 Ao se tomarem procedimentos de escalabilidade vertical (variando-se a quantidade de recursos de 
 cada máquina) e/ou de escalabilidade horizontal (variando-se a quantidade de máquinas em uma ou 
@@ -40,13 +51,21 @@ torna-se interessante identificar, entre as possíveis composições de máquina
 em um ou vários provedores, quais são as configurações de menor custo capazes de executar a 
 aplicação mantendo-se os níveis satisfatórios para os indicadores de desempenho.
 
-Para saber se uma determinada configuração de recursos do provedor é capaz de atender a uma 
-demanda específica, é preciso antes enumerar os indicadores de desempenho que mais interessam 
-à aplicação e a partir daí estabelecer os valores aceitáveis para esses indicadores. Uma vez 
-estabelecidos os valores aceitáveis, pode-se implantar a aplicação sob essa configuração de 
-recursos e então aplicar diferentes níveis de carga de trabalho sobre a aplicação. Ao comparar 
-a resposta da aplicação com os valores dados como aceitáveis para os indicadores, é possível 
-determinar se aquela configuração de recursos escolhida é capaz de executar a aplicação a 
+Para facilitar o entendimento do problema suponha o seguinte exemplo. Uma
+determinada organização quer utilizar um provedor de nuvem para implantar uma
+determinada aplicação web multicamadas. Para saber se uma determinada 
+configuração de recursos do provedor (ex: uma máquina virtual de tamanho
+pequeno para a camada de aplicação e outra para a a camada de dados) é capaz de
+atender a uma demanda específica (ex: carga imposta por 100 usuários
+concorrentes), é preciso antes enumerar os indicadores de desempenho que mais
+interessam à aplicação (ex: tempo de resposta) e a partir daí estabelecer os
+valores aceitáveis para esses indicadores (ex: tempo de resposta abaixo de 10
+segundos para uma determinado conjunto de operações com 100 usuários).
+Uma vez estabelecidos os valores aceitáveis, pode-se implantar a aplicação 
+sob essa configuração de recursos no ambiente da nuvem e então testar o
+desempenho da aplicação. Ao comparar a resposta da aplicação com os valores
+dados como aceitáveis para os indicadores, é possível determinar se aquela configuração de recursos 
+escolhida é capaz de executar a aplicação a 
 contento e ainda calcular o custo mensal dessa implantação.
 
 Porém, partindo-se do pressuposto de que o desempenho da aplicação foi satisfatório, o que se 
@@ -57,35 +76,93 @@ testes por meio da medição do desempenho da aplicação submetida a diferentes
 de trabalho.
 
 Analogamente, as diversas configurações de máquinas e recursos, ainda que no mesmo provedor, 
-podem responder de maneira muito diferente sob o mesmo nível de carga de trabalho a depender 
+podem responder de maneira diferente sob o mesmo nível de carga de trabalho a depender 
 do momento em que sejam ativados \cite{cunha2011investigating, iosup2011performance, 
 jayasinghe2011variations}. Independente do motivo que leve a esse comportamento de certa 
 forma imprevisível, é preciso levar em conta nos ensaios de avaliação de desempenho essa 
 variabilidade e isso pode ser alcançado através da repetição dos cenários de teste em horários 
 e dias diferentes.
 
-Um grande problema começa a se desenhar ao seguir essa abordagem: a fase de ensaios pode atingir 
-patamares elevados de custo, a depender das necessidades de variação da demanda, da arquitetura 
-de implantação e das configurações utilizadas em cada arquitetura implantada 
+Um grande problema começa a se desenhar ao seguir essa abordagem: a fase de
+experimentação pode atingir patamares elevados de custo, a depender das
+necessidades de variação da demanda, da arquitetura de implantação e das configurações utilizadas 
+em cada arquitetura implantada 
 \cite{silva2013cloudbench}. Ainda que certos provedores IaaS ofereçam descontos ou pacotes de 
 horas grátis para novos clientes, em geral esses incentivos são suficientes para custear apenas 
 um mês de utilização de uma única máquina virtual muito pequena, provavelmente incapaz de suportar 
 a carga de uma aplicação real em produção. Assim, executar uma aplicação real, tipicamente 
 implantada em arquitetura de várias camadas, em máquinas virtuais de tamanho considerável e por 
 longos períodos de tempo apenas para estudar o seu comportamento, pode se traduzir em um custo 
-alto que inviabilize o próprio projeto de migração dessa aplicação para a nuvem. Para evitar 
-que sejam feitos testes com todas as combinações de provedores, configurações, horários, cargas 
-de trabalho e métricas avaliadas, é possível lançar mão de técnicas de predição.
+alto que inviabilize o próprio projeto de migração dessa aplicação para a nuvem. 
 
-Através da predição, é possível estimar com razoável aproximação o desempenho que a aplicação 
-apresentará ao ser executada em vários perfis de configuração diferentes, permitindo a 
-determinação de qual configuração de menor custo capaz de executar a aplicação e sem a 
-necessidade da realização completa dos testes. Como consequência, o custo dessa fase de 
-ensaios pode ser reduzido sensivelmente.
+Com o intuito de resolver este problema algumas abordagens (ref XXX) já
+foram desenvolvidas e se organizam em duas categorias: preditiva e empírica.
+Normalmente baseadas em simuladores, estas abordagens apresentam uma baixa
+eficiência (Colocar referencia XXX) com relação a sua capacidade de prever as
+melhores configurações dos recursos da nuvem para variadas cargas impostas na aplicação. Isto se deve
+normalmente a fatores como: diferenças conceituais entre o modelo de simulação e
+o modelo real de comportamento da aplicação e instabilidade dos serviços de
+nuvem. Uma vantagem das abordagens preditivas é não onerar os clientes com os
+testes pois não exigem implantação real no ambiente da nuvem.
 
-Este trabalho propõe heurísticas de predição de custo mínimo para execução de aplicações 
-em ambientes de nuvem de infraestrutura, bem como um arcabouço de programação que apoia a 
-implementação dessas heurísticas. Além disso, o trabalho estuda os resultados apresentados 
-pela aplicação das heurísticas propostas quanto ao custo total de execução da fase de ensaios 
-para escolha da melhor configuração capaz de executar uma aplicação e quanto à acuidade dos 
-resultados da predição em si.
+As abordagens empíricas são baseadas na implantação das aplicações alvo na nuvem 
+e em testes de carga. As abordagens normalmente oferecem suporte aos usuários
+para automatizar as taferas de instalar, configurar e testar as aplicações no
+ambiente da nuvem eliminando uma série de trabalhos manuais custosos. Por
+executarem no ambuiente de nuvem real elas conseguem ajudar a atingir resultados
+significativamente melhores no que diz respeito a seleção de recursos
+computacionais para cargas de trabalho específicas. No entanto, um problema ainda existente nessas abordagens
+é a necessidade de se testar exaustivamente uma grande quantidade de
+configurações de recursos e cargas de trabalho implicando em altos custos
+durante a fase de experimentação.
+
+Com o intuito de combinar as vantagens das duas abordagens, este trabalho
+propõe uma nova maneira de apoiar o planejamento da capacidade de aplicações
+em nuvens IaaS. A nova abordagem tem como premissa a definição de uma relação 
+de capacidade entre as diferentes configurações de recursos oferecidas por um provedor 
+de nuvem, com a qual é possível prever (ou ``inferir''), com alto grau de precisão, 
+o desempenho esperado de uma aplicação para determinadas configurações de recursos. A predição 
+é realizada com base no desempenho observado (em testes na nuvem) para outras
+configurações de recursos do mesmo provedor.
+
+\section{Objetivos}
+
+Este trabalho tem como principal objetivo o de propor uma abordagem de
+planejamento de capacidade baseado nas relações de capacidade existentes em
+recursos da nuvem e também em um processo de inferência de desempenho 
+que utiliza como insumo resultados de execuções reais na nuvem. Os objetivos
+específicos do trabalho são:
+
+\begin{itemize}
+  \item Definir uma forma de representar as relações de capacidade entre
+  configurações de recurso de um provedor de nuvem;
+  \item Propor um processo de planejamento de capacidade que seja capaz de 
+  prever as melhores configurações de recurso capazes de suportar variadas
+  cargas de trabalho;
+  \item Fornecer uma implementação concreta do processo proposto;
+  \item Avaliar a eficiência e efetividade do processo através de um estudo
+  baseado em uma aplicação concreta em um provedor de nuvem real.
+\end{itemize}
+ 
+\section{Contribuições}
+
+Com o intuito de resolver a problemática do planejamento de capacidade na nuvem
+atendendo aos objetivos propostos algumas contribuições podem ser destacadas
+deste trabalho.
+
+Primeiramente propusemos um modelo que representa as relações de capacidade de
+configurações de uma nuvem. Este modelo é chamado de Espaço de Implantação
+e consiste de uma estrutura em grafo que representa as relações entre os
+Tipos de Máquinas Virtuais oferecidos pelo Provedor de nuvem. O grafo é
+construído de forma a indicar as relações de capacidade entre os tipos de
+instância indicando quais tipos são maiores, menores ou não relacionados com
+outros.
+
+Outra contribuição significativa é o processo de inferencia de desempenho ..
+falar das inovacoes, heuristicas, 
+
+capacitor --> falar das inovacoes,das
+
+
+
+\section{Estrutura da Dissertação}
