--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -125,25 +125,25 @@ Com base nos resultados desses testes, foram avaliados os seguintes aspectos em
 relação ao desempenho do Processo: 
 
 \begin{description}
-  \item[Precisão] \hfill \\ Relação entre acertos e erros na predição de 
+  \item[Acurácia] \hfill \\ Relação entre acertos e erros na predição de 
   capacidade das Configurações    
   \item[Eficiência] \hfill \\ Grau de redução do número de execuções reais e,
   consequentemente, do custo e do tempo total gasto nos testes de desempenho.
 \end{description}
 
-\subsection{Precisão}
+\subsection{Acurácia}
 \label{subsec:resultados_precisao}
-A avaliação da Precisão, ou acurácia, das predições realizadas pelo Processo
-de Inferência visa a ratificar a expectativa de que, uma vez identificada uma
-relação de capacidade entre diferentes Configurações oferecidas por um Provedor
-de infraestrutura na nuvem, é possível inferir o desempenho de uma Aplicação
-executando em uma Configuração com base no desempenho observado em uma
-execução real da Aplicação em uma Configuração distinta.
+A avaliação da Acurácia das predições realizadas pelo Processo de Inferência visa 
+a ratificar a expectativa de que, uma vez identificada uma relação de capacidade 
+entre diferentes Configurações oferecidas por um Provedor de infraestrutura na 
+nuvem, é possível inferir o desempenho de uma Aplicação executando em uma 
+Configuração com base no desempenho observado em uma execução real da Aplicação 
+em uma Configuração distinta.
 
 \begin{table}[htbp]
   \centering
   \caption{\label{table:acuracia_capacidade}Acurácia da Inferência de Desempenho no Grafo por Capacidade}
-    {\fontsize{2.5mm}{1em}\selectfont
+    {\fontsize{2.4mm}{1em}\selectfont
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
     \hline
     \multirow{3}{*}{Heurísticas} & \multicolumn{15}{c|}{SLA (segundos)} \\
@@ -170,7 +170,7 @@ execução real da Aplicação em uma Configuração distinta.
 \begin{table}[htbp]
   \centering
   \caption{\label{table:acuracia_preco}Acurácia da Inferência de Desempenho no Grafo por Preço}
-  {\fontsize{2.5mm}{1em}\selectfont
+  {\fontsize{2.4mm}{1em}\selectfont
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
     \hline          
     \multirow{3}{*}{Heurísticas} & \multicolumn{15}{c|}{SLA (segundos)} \\
@@ -201,12 +201,49 @@ sobre os resultados dos experimentos realizados mostra que o Processo de Inferê
 de Desempenho é capaz de obter índices de precisão muito próximos de 100\%, como 
 pode ser observado nas Tabelas~\ref{table:acuracia_capacidade}~e~\ref{table:acuracia_preco}. 
 
-As tabelas mostram XXXXXXXXX
+A Tabela~\ref{table:acuracia_capacidade} apresenta os dados de acurácia das 
+predições realizadas usando-se o Espaço de Implantação estruturado pelas relações
+de capacidade entre as Configurações. Já a Tabela~\ref{table:acuracia_preco} mostra
+a acurácia das predições feitas utilizando-se o Espaço de Implantação organizado
+conforme a relação de preço entre as Configurações. Em ambas, as linhas exibem 
+as Heurísticas usadas na execução do Processo e as colunas, agrupadas segundo
+os SLAs aplicados nos testes, de 10 segundos até 50 segundos, os resultados 
+de acurácia calculados para \emph{Precision}, \emph{Recall} e \emph{F-Measure}.
 
-Isso significa que, com a correta representação das relações de capacidade entre
-as Configurações, o Processo de Inferência de Desempenho proposto neste trabalho
-consegue efetivamente predizer, com grande confiança, quais Configurações de um 
-Provedor são capazes de executar uma Aplicação sob os níveis de demanda analisados. 
+Foram medidos os valores de \emph{Precision}, \emph{Recall} e \emph{F-Measure}
+para as predições realizadas em todas as combinações de Níveis de Carga de 
+Trabalho e SLAs. Cada célula nessas tabelas apresenta a média obtida pela 
+Heurística nas predições para cada SLA em questão. Considerando os 10 Níveis
+de Carga de Trabalho utilizados no experimento, de 100 a 1000 usuários variando
+em intervalos de 100, as fórmulas para o cálculo das médias são as seguintes: 
+
+\begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries F-Measure:}]
+  \item[\emph{Precision}:] $\dfrac{\sum\limits_{i=100}^{1000}\,\dfrac{\emph{true positives}}{\emph{true positives}\,+\,\emph{false positives}}}{10}$
+  \item[\emph{Recall}:] $\dfrac{\sum\limits_{i=100}^{1000}\,\dfrac{\emph{true positives}}{\emph{true positives}\,+\,\emph{false negatives}}}{10}$
+  \item[\emph{F-Measure}:] $\dfrac{\sum\limits_{i=100}^{1000}\,2\,\cdot\,\dfrac{\emph{Precision}\,\times\,\emph{Recall}}{\emph{Precision}\,+\,\emph{Recall}}}{10}$
+\end{description}
+
+Observando as tabelas, nota-se que, dentre os 5 níveis de SLA avaliados, em apenas 
+um deles o Processo deixou de obter 100\% de acurácia nas predições. Durante a
+execução dos experimentos foram observados momentos de flutuação no desempenho
+das máquinas virtuais disponibilizadas pelo Provedor. Essa flutuação afetou os
+testes para o SLA igual a 30 segundos, refletindo em erros de predição. Essa é
+na verdade uma fraqueza constatada do Processo de Avaliação de Capacidade por
+Inferência de Desempenho. De fato, oscilações no desempenho da infraestrutura
+do Provedor já foram observados por \cite{iosup2011performance} e \cite{cunhaavalia}.
+
+Embora afetado pela oscilação do desempenho no Provedor, o Processo de Inferência
+de Desempenho ainda se mostra bastante preciso quando observados os demais 
+cenários e SLAs avaliados. Espera-se, também, que abordagens de avaliação de
+capacidade baseadas puramente em simulação devam ser igualmente ou ainda mais 
+afetados, justamente por não levarem flutuações de desempenho em conta nas 
+simulações, uma vez que é difícil prever em que situações uma flutuação pode 
+ocorrer e, principalmente, qual a intensidade dessa flutuação e seu impacto sobre 
+o desempenho geral de diversos tipos de Configurações.   
+
+Com base na acurácia constatada, a seção seguinte analisa a eficiência do Processo
+de Inferência de Desempenho, aferindo o desempenho de economia de tempo e custo
+trazido pela aplicação das diversas Heurísticas de seleção de Configurações. 
 
 \subsection{Eficiência}
 \label{subsec:resultados_eficiencia}
@@ -328,5 +365,26 @@ realizadas nos testes se aproxima muito dos 100\%.
 Além disso, os experimentos mostram também que a aplicação do Processo de Inferência 
 de Desempenho pode trazer até 96\% de economia financeira e até 88\% de economia 
 de tempo na realização das atividades de testes de desempenho.
+
+\begin{table}[htbp]
+  \centering
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}
+    \hline
+    \multirow{2}{*}{Métricas} & \multicolumn{9}{c|}{Heurísticas} \\
+    \cline{2-10}
+    & CC   & CO   & CP   & OC   & OO   & OP   & PC   & PO   & PP \\
+    \hline
+    Custo    & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\
+    Tempo    & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\
+    Acurácia & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 & 1,00 \\
+    \hline
+    \end{tabular}%
+  \caption{\label{table:resultado_consolidado}Resultados Consolidados da Inferência de Desempenho}
+  \label{tab:addlabel}%
+\end{table}%
+
+A Tabela~\ref{table:resultado_consolidado} apresenta uma consolidação geral dos
+resultados obtidos por todas as Heurísticas definidas pelo Processo de Avaliação
+de Capacidade por Inferência de Desempenho.
 
 % ----------------------------------------------------------
