Cores e correcao de paginacao

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -33,6 +33,7 @@
 \usepackage{caption}      % para legendas
 \usepackage{subcaption}   % para imagens aninhadas
 \usepackage{multirow}     % para row span em tabelas
+\usepackage[table,usenames,dvipsnames]{xcolor} % para cores especiais
 
 % ---
 % Pacotes de citações
@@ -157,6 +158,7 @@
 % ----------------------------------------------------------
 % Introdução
 % ----------------------------------------------------------
+\setcounter{page}{1}
 \include{capitulos/introducao}
 % ----------------------------------------------------------
 
