Reestruturacao de capitulos

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -171,7 +171,12 @@
 % ----------------------------------------------------------
 % Formalização
 % ----------------------------------------------------------
-\include{capitulos/formalizacao}
+%\include{capitulos/formalizacao}
+% Conforme conference call de que participaram Nabor Mendonça,
+% Américo Sampaio e Marcelo Gonçalves em 05/12/2014, a secao de 
+% definicoes foi movida para dentro do capitulo de 
+% processo. A secao de Formalismos deste capítulo será parte da 
+% Tese de % Doutorado de Matheus Cunha.
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
