Novas referencias bibliograficas

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -34,6 +34,38 @@
   journal={ACM SIGCOMM Poster},
   year={2011}
 }
+@conference{foster2009cloud,
+  title={{Cloud computing and grid computing 360-degree compared}},
+  author={Foster, I. and Zhao, Y. and Raicu, I. and Lu, S.},
+  booktitle={Grid Computing Environments Workshop, 2008. GCE'08},
+  pages={1--10},
+  year={2009},
+  organization={Ieee}
+}
+@article{cearley2010case,
+  title={Case Studies in Cloud Computing},
+  author={Cearley, D. and Phifer, G.},
+  journal={Gartner, March},
+  year={2010}
+}
+@article{mell2011nist,
+  title={The NIST Definition of Cloud Computing},
+  author={Mell, P. and Grance, T.},
+  journal={Recommendations of the National Institute of Standards and Technology},  
+  year={2011},
+  month={September},
+  publisher={NIST}
+}
+@article{vaquero2008break,
+  title={A break in the clouds: towards a cloud definition},
+  author={Vaquero, L.M. and Rodero-Merino, L. and Caceres, J. and Lindner, M.},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={39},
+  number={1},
+  pages={50--55},
+  year={2008},
+  publisher={ACM}
+}
 @article{rodero2010infrastructure,
   title={From infrastructure delivery to service management in clouds},
   author={Rodero-Merino, Luis and Vaquero, Luis M and Gil, Victor and Gal{\'a}n, Ferm{\'\i}n and Font{\'a}n, Javier and Montero, Rub{\'e}n S and Llorente, Ignacio M},
@@ -52,23 +84,41 @@
   year={2013},
   organization={IEEE}
 }
+@Unpublished{ github,
+    author = "github",
+    title = "GitHub",
+    note= "\url{https://www.github.com/}",
+    year = "2014"
+}
+@Unpublished{ zoho,
+    author = "Zoho",
+    title = "Zoho",
+    note= "\url{https://www.zoho.com/}",
+    year = "2014"
+}
+@Unpublished{ salesforce,
+    author = "Salesforce",
+    title = "Salesforce",
+    note= "\url{https://www.salesforce.com/}",
+    year = "2014"
+}
 @Unpublished{ appengine,
 	author = "AppEngine",
 	title = "Google App Engine",
-	note= "\url{http://code.google.com/intl/en/appengine/}",
-	year = "2012"
+	note= "\url{https://cloud.google.com/appengine/}",
+	year = "2014"
 }
 @Unpublished{azure,
 	author = "Azure",
 	title = "Windows Azure Platform",
-	note= "\url{http://www.windowsazure.com/}",
-	year = "2012"
+	note= "\url{http://azure.microsoft.com/}",
+	year = "2014"
 }
 @Unpublished{ rackspace,
 	author = "Rackspace",
 	title = {The Rackspace Cloud},
 	note = {\url{http://www.rackspacecloud.com/}},
-	year = {2012},
+	year = {2014},
 }
 @Unpublished{ rightscale,
 	author = "RightScale",
@@ -123,7 +173,7 @@
 	author = "EC2",
 	title = {Amazon Elastic Compute Cloud},
 	note = {\url{http://aws.amazon.com/ec2}},
-	year = {2012}
+	year = {2014}
 }
 @Unpublished{ s3,
 	author = "S3",
@@ -220,6 +270,16 @@ title = {{CloudCmp: Comparing Public Cloud Providers}},
 booktitle = {Internet Measurement Conference},
 year = {2010}
 }
+@article{Zhang2010,
+  title={Cloud computing: state-of-the-art and research challenges},
+  author={Zhang, Q. and Cheng, L. and Boutaba, R.},
+  journal={Journal of Internet Services and Applications},
+  volume={1},
+  number={1},
+  pages={7--18},
+  year={2010},
+  publisher={Springer}
+}
 @inproceedings{jung2013cloudadvisor,
   title={CloudAdvisor: A Recommendation-as-a-Service Platform for Cloud Configuration and Pricing},
   author={Jung, Gueyoung and Mukherjee, Tridib and Kunde, Shruti and Kim, Hyunjoo and Sharma, Naveen and Goetz, Frank},
@@ -262,6 +322,24 @@ year = {2010}
   pages={519--532},
   year={2011},
   publisher={Elsevier}
+}
+@Unpublished{ eucalyptus,
+    author = "Eucalyptus",
+    title = {Eucalyptus The Open Source Cloud Plataform},
+    note = {\url{http://open.eucalyptus.com/}},
+    year = {2014},
+}
+@Unpublished{ openstack,
+    author = "openstack",
+    title = {openstack},
+    note = {\url{http://openstack.org/}},
+    year = {2014},
+}
+@Unpublished{ opennebula,
+    author = "OpenNebula",
+    title = {Open Source Tookit for Cloud Computing},
+    note = {\url{http://www.opennebula.org}},
+    year = {2014}
 }
 @article{avetisyan2010open,
   title={Open cirrus: A global cloud computing testbed},
