--- a/Dissertacao_Marcelo_Goncalves/agradecimentos.tex
+++ b/Dissertacao_Marcelo_Goncalves/agradecimentos.tex
@@ -1,15 +1,41 @@
 \begin{agradecimentos}
-Deus, Isabela e Mel, Mãe(orações de longe)
+Agradeço primeira e imensamente a Deus pela oportunidade de começar este trabalho, 
+pela força concedida para que nele perseverasse até o final e pela felicidade em 
+vê-lo agora terminado.
+
+Agradeço à minha família, minha esposa Isabela e minha filha Melisa, pelo apoio
+incondicional, pela inspiração, motivação e incentivo. Elas sofreram o 
+sacrifício de tantos momentos de convivência e partilha, mas por elas é que
+esta realização se concretiza. À minha mãe, Dilma, a quem definitivamente devo o 
+fato de poder ter chegado até aqui, ela que me ensinou a ter a força em continuar 
+mesmo quando tudo é mais difícil e que, mesmo de longe, me protegeu e me animou 
+com suas orações poderosas.
  
-Chagas, Bento, -- liberação e suporte
+Obrigado a Chagas, Marcelo Bento e toda minha equipe na Secretaria da 
+Fazenda do Ceará, que me deram o suporte necessário para conseguir conciliar as 
+obrigações acadêmicas e profissionais, com liberação de faltas e todo o apoio
+na realização do trabalho para que os projetos, lá e aqui, continuassem sempre
+em andamento.
 
-Jaime Gama, Paulo Benicio, José Maria -- cartas de recomendacao
+Agradeço também a confiança e bondade do meu grande amigo e Mestre, Jaime Gama, 
+do meu irmão de Equipe de Nossa Senhora, Professor Doutor José Maria Monteiro 
+Filho, e meu amigo e colega de SEFAZ, Professor Doutor Paulo Benício,
+que gentilmente me concederam as cartas de recomendação que ajudaram a abrir as
+portas do PPGIA para que eu ingressasse neste Mestrado.
 
-Matheus, -- colaboração
+Meu muito obrigado ao amigo, colega, Mestre e Doutorando Matheus Cunha pela 
+colaboração na construção desta Dissertação, pela passagem de experiências, 
+imensa ajuda durante todo o curso, pela ``inspiração'' em alguns pontos chave do 
+texto ;-) e pelo código contribuído no projeto do Cloud Capacitor.
 
-Américo e Nabor,
+Agradeço também sobremaneira aos meus orientadores, Professor Doutor Américo Sampaio
+e Professor Doutor Nabor Mendonça, pela imensurável colaboração, pela paciência,
+dedicação, e, principalmente, por tamanho conhecimento e aprendizado de que pude
+desfrutar durante esse período em que me deram a oportunidade de ser aluno.
 
-Julio e Ronaldo, -- momentos de dificuldade e horas de laboratorio
+Obrigado ainda ao Júlio e ao Ronaldo, colegas de mestrado, que juntos
+compartilhamos momentos de dificuldade e horas de laboratorio, provas tenebrosas,
+prazos, pesquisas, testes, máquinas, manuais. 
 
 \end{agradecimentos}
 % ---
