--- a/Dissertacao_Marcelo_Goncalves/aprovacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/aprovacao.tex
@@ -26,8 +26,8 @@
    Trabalho aprovado. \imprimirlocal, 24 de novembro de 2012:
 
    \assinatura{\textbf{\imprimirorientador} \\ Orientador} 
-   \assinatura{\textbf{Professor} \\ Convidado 1}
-   \assinatura{\textbf{Professor} \\ Convidado 2}
+   \assinatura{\textbf{Pedro Porfírio Farias} \\ Unifor}
+   \assinatura{\textbf{Danielo G Gomes} \\ UFC}
    %\assinatura{\textbf{Professor} \\ Convidado 3}
    %\assinatura{\textbf{Professor} \\ Convidado 4}
       
