--- a/Dissertacao_Marcelo_Goncalves/epigrafe.tex
+++ b/Dissertacao_Marcelo_Goncalves/epigrafe.tex
@@ -1,11 +1,10 @@
 \begin{epigrafe}
     \vspace*{\fill}
   \begin{flushright}
-    \textit{``Não vos amoldeis às estruturas deste mundo, \\
-    mas transformai-vos pela renovação da mente, \\
-    a fim de distinguir qual é a vontade de Deus: \\
-    o que é bom, o que Lhe é agradável, o que é perfeito.\\
-    (Bíblia Sagrada, Romanos 12, 2)}
+    \emph{``Porque um dia é preciso parar de sonhar, \\
+    tirar os planos da gaveta e, \\
+    de algum modo, começar.'' \\
+    Amyr Klink}
   \end{flushright}
 \end{epigrafe}
 % ---
