--- a/Dissertacao_Marcelo_Goncalves/fichabibliografica.tex
+++ b/Dissertacao_Marcelo_Goncalves/fichabibliografica.tex
@@ -28,8 +28,9 @@
   \imprimirdata.}\\
   
   \hspace{0.5cm}
-    1. Cloud computing.
-    2. Heurísticas.
+    1. Computação em Nuvem.
+    2. Planejamento de Capacidade.
+    3. Inferência de Desempenho.
     I. Orientador.
     II. Universidade de Fortaleza.
     III. PPGIA.
