Titulo definitivo e inclusao da fundamentacao teorica

--- a/Dissertacao_Marcelo_Goncalves/dissertacao.tex
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.tex
@@ -65,7 +65,7 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Processo para Inferência de Desempenho de \\ Configurações para Execução de Aplicações em \\ Ambientes de Nuvem de Infraestrutura}
+\titulo{Um Processo de Inferência de Desempenho \\ para Apoiar o Planejamento da Capacidade \\ de Aplicações na Nuvem}
 \autor{Marcelo Canário Gonçalves}
 \orientador{Prof. Dr. Américo Tadeu Falcone Sampaio}
 \coorientador{Prof. Dr. Nabor das Chagas Mendonça}
@@ -163,10 +163,11 @@
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
-% Trabalhos Relacionados
+% Fundamentação Teórica e Trabalhos Relacionados
 % ----------------------------------------------------------
-\include{capitulos/relacionados}
-\include{capitulos/fundamentacao}
+\include{capitulos/fundamentacao-relacionados}
+%\include{capitulos/fundamentacao}
+%\include{capitulos/relacionados}
 % ----------------------------------------------------------
 
 % ----------------------------------------------------------
